# POD7

./: .gitignore  CMakeLists.txt  DBusPOD7Workers.cpp  DBusPOD7Workers.h  README.md  globals.h  main.cpp  pod7.xml  pod7_adaptor.hpp
Resources/Lokalize/: 0_getstrings.sh  2_makemo.sh  index.lokalize
Resources/Lokalize/fr/: POD7.po
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
